[package]
name = "playground-tide-mongodb"
version = "0.1.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8.0"
async-std = { version = "1.5.0", features = ["attributes"] }
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", features = ["async-std-runtime"], default-features = false }
env_logger = "0.7.1"
log = "0.4.8"
bson = "0.14.1"
femme = "1.3.0"
